--- a/hcard.html
+++ b/hcard.html
@@ -26,7 +26,7 @@ span.fn {
 	display: block;
 }
 
-.email > i {
+.email > i, .tel i {
 	color: black;
 }
 
@@ -35,7 +35,7 @@ i {
 }
 
 tr > td:nth-child(1){
-	padding-right: 30px;
+	padding-right: 25px;
 }
 
 #links {
@@ -69,7 +69,7 @@ tr > td:nth-child(1){
 
 			<td>		
 				<a class="email" href="mailto:bardonjeremy1@gmail.com"><i class="fa fa-envelope-o"></i>bardonjeremy1@gmail.com</a>
-				<span class="tel">
+				<a class="tel" href="tel:+33695052487">
 					<span class="type"><i class="fa fa-phone"></i></span>
 					<span class="value">+33</span> 
 					<span class="value">6</span> 
@@ -77,7 +77,7 @@ tr > td:nth-child(1){
 					<span class="value">05</span> 
 					<span class="value">24</span> 
 					<span class="value">87</span>
-				</span>		
+				</a>		
 			</td>
 		</tr>
 
@@ -98,8 +98,8 @@ tr > td:nth-child(1){
 					<a rel="me" class="url" href="https://fr.linkedin.com/in/jeremybardon" style="color:#0b6087;"><i class="fa fa-linkedin"></i></a>	
 
 					<div id="download">
-						<a class="url" href="#"><i class="fa fa-user-plus"></i>Obtenir vCard</a><br>
-						<a class="url" href="#"><i class="fa fa-file-text" style="margin-right: 8px;"></i>Télécharger Cv</a>	
+						<a class="url" href="https://github.com/jbardon/vcard/raw/master/Bardon_Jeremy-vCard.vcf" download><i class="fa fa-user-plus"></i>Obtenir vCard</a><br>
+						<a class="url" href="https://github.com/jbardon/vcard/raw/master/Bardon_Jeremy-CV.pdf" download><i class="fa fa-file-text" style="margin-right: 8px;"></i>Télécharger Cv</a>	
 					</div>			
 				</div>
 			</td>
