--- a/mail/test.html
+++ b/mail/test.html
@@ -1,5 +1,3 @@
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-
 <style type="text/css">
 img.photo {
     width: 80px;
@@ -15,6 +13,7 @@ img.logo {
 div.vcard > table {
 	display: inline-block;
 	margin-left: 20px;
+	margin-top: -35px;
 }
 
 span.fn {
@@ -26,11 +25,7 @@ span.fn {
 	display: block;
 }
 
-.email > i, .tel i {
-	color: black;
-}
-
-i {
+img {
 	margin-right: 5px;
 }
 
@@ -40,12 +35,13 @@ tr > td:nth-child(1){
 
 #links {
 	position: relative;
+	padding-top: 10px;
 	font-size: 25px;
 }
 
 #download {
 	position: absolute;
-	top: -2px;
+	top: 4px;
 	right: -18px;
 }
 
@@ -68,9 +64,9 @@ tr > td:nth-child(1){
 			</td>
 
 			<td>		
-				<a class="email" href="mailto:bardonjeremy1@gmail.com"><i class="fa fa-envelope-o"></i>bardonjeremy1@gmail.com</a>
+				<a class="email" href="mailto:bardonjeremy1@gmail.com"><img src="https://github.com/jbardon/vcard/raw/master/mail/email.png"/>bardonjeremy1@gmail.com</a>
 				<a class="tel" href="tel:+33695052487">
-					<span class="type"><i class="fa fa-phone"></i></span>
+					<span class="type"><img src="https://github.com/jbardon/vcard/raw/master/mail/tel.png"/></span>
 					<span class="value">+33</span> 
 					<span class="value">6</span> 
 					<span class="value">95</span> 
@@ -93,13 +89,13 @@ tr > td:nth-child(1){
 
 			<td>
 				<div id="links">
-					<a rel="me" class="url" href="skype:jbardon?call" style="color:#43bbe8;"><i class="fa fa-skype"></i></a>
-					<a rel="me" class="url" href="https://github.com/jbardon" style="color:black;"><i class="fa fa-github"></i></a>					
-					<a rel="me" class="url" href="https://fr.linkedin.com/in/jeremybardon" style="color:#0b6087;"><i class="fa fa-linkedin"></i></a>	
+					<a rel="me" class="url" href="skype:jbardon?call" style="color:#43bbe8;"><img src="https://github.com/jbardon/vcard/raw/master/mail/skype.png"/></a>
+					<a rel="me" class="url" href="https://github.com/jbardon" style="color:black;"><img src="https://github.com/jbardon/vcard/raw/master/mail/git.png"/></a>					
+					<a rel="me" class="url" href="https://fr.linkedin.com/in/jeremybardon" style="color:#0b6087;"><img src="https://github.com/jbardon/vcard/raw/master/mail/linkedin.png"/></a>	
 
 					<div id="download">
-						<a class="url" href="https://github.com/jbardon/vcard/raw/master/Bardon_Jeremy-vCard.vcf" download><i class="fa fa-user-plus"></i>Obtenir vCard</a><br>
-						<a class="url" href="https://github.com/jbardon/vcard/raw/master/Bardon_Jeremy-CV.pdf" download><i class="fa fa-file-text" style="margin-right: 8px;"></i>Télécharger Cv</a>	
+						<a class="url" href="https://github.com/jbardon/vcard/raw/master/Bardon_Jeremy-vCard.vcf" download><img src="https://github.com/jbardon/vcard/raw/master/mail/vcard.png"/>Obtenir vCard</a><br>
+						<a class="url" href="https://github.com/jbardon/vcard/raw/master/Bardon_Jeremy-CV.pdf" download><img src="https://github.com/jbardon/vcard/raw/master/mail/cv.png" style="margin-right: 8px;"/>Télécharger Cv</a>	
 					</div>			
 				</div>
 			</td>
